# kuberay-serving-system

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  credit_scoring_rayservice.yaml  dockerfile  makefile  pyproject.toml  serve_config.yaml  streamlit_app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: .env
configs/kuber/: credit_scoring_rayservice.yaml  nginx.yaml
data/: example.json  sample.json
designdoc/: designdoc.md
designdoc/swagger/: swagger_api_design.yaml
models/: catboost_D36.pkl  catboost_D36_calib.pkl  xgboost_D24_calib.pkl
notebooks/: baseline.ipynb  data.ipynb  dtypes  eda.ipynb  modeling.ipynb  modeling_catboost_D36.ipynb  modeling_xgboost_D24.ipynb  probability_calibration.ipynb  test.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
reports/: report_1702323226.749415.html
src/app/: streamlit_app.py
src/data_models/: __init__.py  data_models.py  request_models.py  response_models.py
src/models/catboost_D36/: pipeline.py
src/models/model_a/: __init__.py  data_prepare.py  pipeline.py
src/models/model_b/: pipeline.py
src/models/model_c/: pipeline.py
src/models/xgboost_D24/: pipeline.py
tests/: locust_test.py  test.ipynb
